card spacing added, fixed checkerboarding

--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@ main {
 
 .tasks-section {
     display: grid;
-    grid-template-columns: 1fr minmax(300px 1fr);
+    grid-template-columns: 1fr;
     padding: 15px;
 }
 
 
-@media screen and (min-width: 480px) {
-    
+@media screen and (min-width: 330px) {
+
 }
 
 @media screen and (min-width: 600px) {
