--- a/src/components/common/card.css
+++ b/src/components/common/card.css
@@ -5,4 +5,6 @@
     border: 3px solid;
     border-color: black;
     background-color: burlywood;
+    padding: 10px;
+    margin: 2%;
 }
